Fixed footer grid to allow wrapping of columns on smaller screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -31,7 +31,11 @@ a.navbar-brand, .nav-item > a {
     display: grid;
     grid-template-rows: 1fr auto;
     height: 100vh;
-    background-color: var(--background);
+    background-image: url(images/pho.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 .content {
@@ -39,11 +43,11 @@ a.navbar-brand, .nav-item > a {
 }
 
 main {
-    background-image: url(images/pho.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+    // background-image: url(images/pho.jpg);
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // background-position: center center;
+    // background-attachment: fixed;
     height: 100vh;
 }
 
@@ -52,7 +56,7 @@ footer {
 }
 
 .footer-info {
-    padding: 24px;
+    padding: 36px 12px;
 }
 
 .footer-info p {
@@ -65,4 +69,8 @@ footer {
 
 .social-icon {
     display: flex;
+}
+
+.later-hour {
+    text-align: end;
 }
